# 20240115advpython

./: FunWithTragedy.slides.html  card.py  carddeck.py  cmd_line_args.py  conditionals.py  count_breakfast_with_counter.py  create_knights_xml.py  dict_examples.py  exception_finally.py  foo.py  functions.py  hello.py  iterators.py  jokerdeck.py  junk.py  knights.xml  list_and_other_comps.py  list_comps_and_gen_exprs.py  list_examples.py  mycustom.mplstyle  numeric_examples.py  parse_xml_solar_easy.py  parse_xml_solar_hard.py  raise_to_power.py  read_knights_into_dict.py  really_simple_generator_function.py  sequences.py  spam.py  string_examples.py  tuple_examples.py  using_classes.py  variable_scope.py  variables.py  while_loops.py  writing_to_screen.py
ANSWERS/: age_of_geeks.py  c2f.py  c2f_batch.py  c2f_batch_safe.py  c2f_log.py  cicadas.py  cpresidents.py  energy_use_plot.py  jpresidents.py  knight.py  knights_to_spreadsheet.py  pickle_potus.py  potus.py  potus_amb.py  potus_amb_main.py  potus_main.py  pres_by_dob.py  pres_gen.py  pres_upper.py  unpickle_potus.py  xpresidents.py  xwords.py
DATA/: computer_people.txt  computer_people.xlsx  fruit1.txt  solar.json
EXAMPLES/: basic_sorting.py  bm_all_sequence_types.py  bm_augmented_add.py  (+89 more)
SETUP/cookiecutter-python-module/{{cookiecutter.module_slug}}/: README.{{cookiecutter.readme_format}}  pyproject.toml
SETUP/cookiecutter-python-module/{{cookiecutter.module_slug}}/src/: {{cookiecutter.module_slug}}.py
SETUP/cookiecutter-python-module/{{cookiecutter.module_slug}}/tests/: test_{{cookiecutter.module_slug}}.py
(+24 files in other folders)
